--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
   "license": "MIT",
   "devDependencies": {
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "webpack": "^1.13.1",
     "serve": "^1.4.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
     "express": "^4.14.0",
     "history": "^3.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-router": "^2.6.1",
+    "react-redux": "^5.0.4",
+    "jquery": "^3.2.1",
+    "redux": "^3.6.0"
   }
 }
